Fix PDF drawer z-index issue (increased to 11000)

--- a/web/src/components/pdf-previewer/index.less
+++ b/web/src/components/pdf-previewer/index.less
@@ -60,7 +60,7 @@
 
 /* NUOVO: Mobile responsive drawer */
 :global(.pdf-drawer-debug) {
-  z-index: 10500 !important;
+  z-index: 11000 !important;
 
   @media (max-width: 768px) {
     :global(.ant-drawer-content-wrapper) {
@@ -73,6 +73,11 @@
       width: 80vw !important;
     }
   }
+}
+
+/* Mask del PDF drawer con z-index appropriato */
+:global(.ant-drawer-mask[style*='opacity']) {
+  z-index: 10999 !important;
 }
 
 :global(.pdf-drawer-debug .ant-drawer-content) {
